adds styling to the blog post items

--- a/style.css
+++ b/style.css
@@ -63,3 +63,17 @@ body {
   background: #e0e0e0;
   color: inherit;
 }
+
+#navbar ul li:hover ul li span {
+  float: right;
+  color: #fff;
+  background: coral;
+  padding: 0.2rem 0.5rem;
+  text-align: center;
+  font-size: 0.8rem;
+  border-radius: 5px;
+}
+
+#navbar ul li:hover ul li:hover span {
+  background: chocolate;
+}
