--- a/style.css
+++ b/style.css
@@ -100,3 +100,13 @@ body {
   font-size: 4rem;
 }
 
+@media(max-width: 600px) {
+  #navbar ul li {
+    display: block;
+  }
+
+  #navbar ul li:hover ul {
+    width: 100%;
+    position: relative;
+  }
+}
